--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
-<html lang="en">
+<html>
 <head>
-
+<title>Saif Ahammod</title>
+<style>
+    body {background-color: #01050F;}
+    h1   {color: blue;}
+    p    {color: red;}
+    </style>
 </head>
 <body>
-  
+
+<h1 align="center">Sorry</h1>
+<p align="center">This site is under maintenance please contact saif.ahammod@gmail.com </p>
+
 </body>
-</html>
+</html> 
+
