--- a/index.html
+++ b/index.html
@@ -2,16 +2,100 @@
 <html>
 <head>
 <title>Saif Ahammod</title>
+
 <style>
-    body {background-color: #01050F;}
+    body {background-color: #f1f1f1;}
     h1   {color: blue;}
     p    {color: red;}
+    .sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #ffffff;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+/* Sidebar links */
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+}
+
+/* Active/current link */
+.sidebar a.active {
+  background-color: #000000;
+  color: white;
+}
+
+/* Links on mouse-over */
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+
+/* Page content. The value of the margin-left property should match the value of the sidebar's width property */
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+/* On screens that are less than 700px wide, make the sidebar into a topbar */
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {float: left;}
+  div.content {margin-left: 0;}
+}
+
+/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px;
+
+}
+.w3-button {
+    width:150px;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+
+}
     </style>
 </head>
 <body>
+ <!-- The sidebar -->
+ <div class="sidebar">
+    <img src="logo.png" alt="Saif Ahammod" style="width:50%;">
+    <a class="active" href="#home">Home</a>
+    <a href="#news">About</a>
+    <a href="#contact">Education</a>
+    <a href="#about">Experience</a>
+    <a href="#about">Projects</a>
+    <a href="#about">Publications</a>
+    <a href="#about">Download CV</a>
 
-<h1 align="center">Sorry</h1>
-<p align="center">This site is under maintenance please contact saif.ahammod@gmail.com </p>
+  </div>
+  
+  <!-- Page content -->
+  <div class="content">
+    ..
+  </div> 
 
 </body>
 </html> 
