--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ img {
  <div class="sidebar">
     <img src="logo.png" alt="Saif Ahammod" style="width:50%;">
     <a class="active" href="#home">Home</a>
-    <a href="#news">About</a>
+    <a href="about.html">About</a>
     <a href="#contact">Education</a>
     <a href="#about">Experience</a>
     <a href="#about">Projects</a>
