--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ img {
     <a class="active" href="#home">Home</a>
     <a href="about.html">About</a>
     <a href="#contact">Education</a>
-    <a href="#about">Experience</a>
-    <a href="#about">Projects</a>
-    <a href="#about">Publications</a>
-    <a href="#about">Download CV</a>
+    <a href="#Experience">Experience</a>
+    <a href="#Projects">Projects</a>
+    <a href="#Publications">Publications</a>
+    <a href="#Download CV">Download CV</a>
 
   </div>
   
