--- a/index.html
+++ b/index.html
@@ -84,12 +84,11 @@ img {
     <img src="logo.png" alt="Saif Ahammod" style="width:50%;">
     <a class="active" href="#home">Home</a>
     <a href="about.html">About</a>
-    <a href="#contact">Education</a>
+    <a href="#Education">Education</a>
     <a href="#Experience">Experience</a>
     <a href="#Projects">Projects</a>
     <a href="#Publications">Publications</a>
     <a href="#Download CV">Download CV</a>
-
   </div>
   
   <!-- Page content -->
