--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 
 <style>
     body {background-color: #f1f1f1;}
-    h1   {color: blue;}
-    p    {color: red;}
     .sidebar {
   margin: 0;
   padding: 0;
@@ -27,8 +25,10 @@
 
 /* Active/current link */
 .sidebar a.active {
-  background-color: #000000;
-  color: white;
+  background-color: #f1f1f1;
+  color: black;
+text-shadow: #555;
+
 }
 
 /* Links on mouse-over */
@@ -64,9 +64,11 @@ div.content {
 }
 img {
   display: block;
-  margin-left: auto;
+  margin-left:auto;
   margin-right: auto;
   padding: 20px;
+  margin-bottom: auto;
+  margin-top:auto;
 
 }
 .w3-button {
@@ -80,20 +82,22 @@ img {
 </head>
 <body>
  <!-- The sidebar -->
- <div class="sidebar">
-    <img src="logo.png" alt="Saif Ahammod" style="width:50%;">
-    <a class="active" href="#home">Home</a>
-    <a href="about.html">About</a>
-    <a href="#Education">Education</a>
+ 
+ <div align="center" class="sidebar">
+    <a  href="#home"><img src="Images/logo.png" alt="Saif Ahammod" style="width:70%;"></a>
+    <a class="active" href="about.html">About</a>
     <a href="#Experience">Experience</a>
-    <a href="#Projects">Projects</a>
+    <a href="#expertise">Expertise</a>
     <a href="#Publications">Publications</a>
-    <a href="#Download CV">Download CV</a>
+    
   </div>
   
   <!-- Page content -->
-  <div class="content">
-    ..
+  <div align="center" class="content">
+    <img src="Images/HomeProPic1.png" alt="Saif Ahammod" style="width:40%;">
+    <p>
+      Hola its Saif here.
+    </p>
   </div> 
 
 </body>
