--- a/about.html
+++ b/about.html
@@ -8,11 +8,16 @@
     .sidebar {
   margin: 0;
   padding: 0;
-  width: 200px;
+  width: 250px;
   background-color: #ffffff;
   position: fixed;
   height: 100%;
   overflow: auto;
+  margin-top: 10px;
+}
+
+div.sidebarlogo{
+  margin-bottom: 30px;
 }
 
 /* Sidebar links */
@@ -38,11 +43,12 @@ font-weight: bold;
 .sidebar a:hover:not(.active) {
 font-size: larger;
   color: rgb(0, 0, 0);
+  letter-spacing: 2px;
 }
 
 /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
 div.content {
-  margin-left: 200px;
+  margin-left: 250px;
   padding: 1px 16px;
   height: auto;
 }
@@ -69,7 +75,7 @@ img {
   display: block;
   margin-left:auto;
   margin-right: auto;
-  padding: 20px;
+
   margin-bottom: auto;
   margin-top:auto;
 
@@ -82,8 +88,7 @@ p{
 
 h1{
 
-    /* font-family:cursive; */
-    line-height: 2;
+
 }
 h2{
 
@@ -106,7 +111,6 @@ text-indent: 20px;
 }
 h5{
 /* font-family:cursive; */
-line-height: .2;
 text-indent: 20px;
 margin-bottom: 40px;
 }
@@ -123,7 +127,7 @@ margin-bottom: 40px;
   transition-duration: 0.4s;
   cursor: pointer;
   border-radius: 2px;
-  margin-top: 40px;
+  margin-top: 60px;
   border-top-left-radius: 25px;
   border-bottom-right-radius: 25px;
 }
@@ -143,8 +147,8 @@ margin-bottom: 40px;
    left: 0;
    bottom: 0;
    width: 100%;
-   background-color: black;
-   color: white;
+   background-color: #f1f1f1;
+   color: black;
    text-align: center;
 }
     </style>
@@ -153,12 +157,15 @@ margin-bottom: 40px;
  <!-- The sidebar -->
  
  <div align="center" class="sidebar">
-    <a  href="index.html"><img src="Images/logo.png" alt="Saif Ahammod" style="width:70%;"></a>
+  <div align="center" class="sidebarlogo">
+    <a  href="https://saifahammod.me"><img src="Images/logo.png" alt="Saif Ahammod" style="width:70%;"></a>
+  </div>
+    
     <a class="active" href="about.html">About</a>
     <a href="experience.html">Experience</a>
     <a href="expertise.html">Expertise</a>
-    <a href="publications.html">Publications</a>
-    <a href="publications.html">Contact</a>
+    <a href="mywork.html">My Work</a>
+    <a href="contact.html">Contact</a>
     <button class="button button1"><a href="Doc/cv.pdf">Download CV</a></button>
   </div>
   
@@ -167,8 +174,9 @@ margin-bottom: 40px;
     <div  style="width: 1000px;">
         <img src="Images/AboutPic1.jpg" alt="Saif Ahammod" style="width:50%;">
         <h1>
-            Hi, Saif Ahammod Khan is here
+            Md. Saif Ahammod Khan
         </h1>
+        <h3 align="center">Birthdate: 15 December, 1996</h3>
         <h2 align="left">
             About Me:
         </h2>
@@ -214,7 +222,7 @@ margin-bottom: 40px;
     
   </div>
   <div class="footer">
-    <p>@Copyright Saif Ahammod Khan 2022- All Right Reserved.</p>
+    <p>©Copyright  2022 - Saif Ahammod Khan.</p>
   </div>
 </body>
 
