--- a/index.html
+++ b/index.html
@@ -85,19 +85,11 @@ font-size: 30px;
 }
 
 .button1:hover {
-  border:  2px solid #000000;
+
   color: black;
   background-color: #ffffff;
-  font-size: larger;
+  font-size: large;
   
-}
-.footer {
-  margin-top: 50px;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   color: white;
-   text-align: center;
 }
 
     </style>
@@ -117,11 +109,9 @@ font-size: 30px;
         <h2>
           Android App Developper and Data Scientist
         </h2>
-        <a  href="about.html"><button class="button button1" >HIRE ME</button></a>
+        <a  href="about.html"><button class="button button1" >PORTFOLIO</button></a>
   </div>
-  <div class="footer">
-    <p>©Copyright  2022 - Saif Ahammod Khan.</p>
-  </div>
+
   
 </body>
 
