--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <style>
+            .footer {
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color: black;
+   text-align: center;
+}
+
+        </style>
+    </head>
 <body>
 <div align="center">
     <img src="Images/Comingsoon.gif" alt="Coming Soon" width="600" height="600">
 </div>
-
+<div class="footer">
+    <p>© Copyright  2022 - Saif Ahammod Khan.</p>
+  </div>
 
 </body>
 </html>
