--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Saif Ahammod</title>
-
+<link rel="icon" type="image/x-icon" href="Images/favlogo.png">
 <style>
 
 *,
@@ -121,7 +121,7 @@ font-size: 30px;
   border-radius: 2px;
   border-top-left-radius: 25px;
   border-bottom-right-radius: 25px;
-  font-family: sans-serif;
+  font-family: Arial, sans-serif;
   margin-top: 80px;
 }
 
@@ -133,7 +133,7 @@ font-size: 30px;
   padding: 20px;
   font-family: Arial, sans-serif;
   color: rgb(255, 255, 255);
-  border:  2px solid #ffffff;
+  border:  1px solid #ffffff;
 
   letter-spacing: .2em;
 }
