--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>About Saif</title>
-  <link rel="icon" type="image/x-icon" href="Images/Saif Logo.png">
+  <link rel="icon" type="image/x-icon" href="Images/Logo.png">
 
   <style>
     body {
@@ -254,7 +254,7 @@
 
         <li>
           <p align="Justify">
-            <b>Career Interest:</b> Lecturer, Data Scientist or Software Engineer
+            <b>Career Interest:</b> Teaching, Data Scientist or Software Engineer
           </p>
 
         </li>
