--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Saif Ahammod </title>
-  <link rel="icon" type="image/x-icon" href="Images/Saif Logo.png">
+  <link rel="icon" type="image/x-icon" href="Images/Logo.png">
   <style>
     *,
     *::before,
