--- a/mywork.html
+++ b/mywork.html
@@ -171,10 +171,10 @@
     </div>
 
     <a href="about.html">About</a>
-    <a class="active" href="education.html">Education</a>
+    <a href="education.html">Education</a>
     <a href="experience.html">Experience</a>
     <a href="expertise.html">Expertise</a>
-    <a href="mywork.html">My Work</a>
+    <a class="active" href="mywork.html">My Work</a>
     <a href="contact.html">Contact</a>
     <button class="button button1"><a href="Doc/cv.pdf">Download CV</a></button>
   </div>
