--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Education</title>
+  <title>Experience</title>
   <link rel="icon" type="image/x-icon" href="Images/Logo.png">
 
   <style>
