photo added in Experience

--- a/experience.html
+++ b/experience.html
@@ -284,38 +284,40 @@ body {
       </h2>
       <div class="row"> 
         <div class="column">
-          <img src="/w3images/wedding.jpg" style="width:100%">
-          <img src="/w3images/rocks.jpg" style="width:100%">
-          <img src="/w3images/falls2.jpg" style="width:100%">
-          <img src="/w3images/paris.jpg" style="width:100%">
-          <img src="/w3images/nature.jpg" style="width:100%">
-          <img src="/w3images/mist.jpg" style="width:100%">
-          <img src="/w3images/paris.jpg" style="width:100%">
+          <img src="Images/gallery/1.jpg" style="width:100%">
+          <img src="Images/gallery/5.jpg" style="width:100%">
+          <img src="Images/gallery/9.jpg" style="width:100%">
+          <img src="Images/gallery/13.jpg" style="width:100%">
+          <img src="Images/gallery/17.jpg" style="width:100%">
+          <img src="Images/gallery/21.jpg" style="width:100%">
+          <img src="Images/gallery/25.jpg" style="width:100%">
         </div>
         <div class="column">
-          <img src="/w3images/underwater.jpg" style="width:100%">
-          <img src="/w3images/ocean.jpg" style="width:100%">
-          <img src="/w3images/wedding.jpg" style="width:100%">
-          <img src="/w3images/mountainskies.jpg" style="width:100%">
-          <img src="/w3images/rocks.jpg" style="width:100%">
-          <img src="/w3images/underwater.jpg" style="width:100%">
+          <img src="Images/gallery/2.jpg" style="width:100%">
+          <img src="Images/gallery/6.jpg" style="width:100%">
+          <img src="Images/gallery/10.jpg" style="width:100%">
+          <img src="Images/gallery/14.jpg" style="width:100%">
+          <img src="Images/gallery/18.jpg" style="width:100%">
+          <img src="Images/gallery/22.jpg" style="width:100%">
+
         </div>  
         <div class="column">
-          <img src="/w3images/wedding.jpg" style="width:100%">
-          <img src="/w3images/rocks.jpg" style="width:100%">
-          <img src="/w3images/falls2.jpg" style="width:100%">
-          <img src="/w3images/paris.jpg" style="width:100%">
-          <img src="/w3images/nature.jpg" style="width:100%">
-          <img src="/w3images/mist.jpg" style="width:100%">
-          <img src="/w3images/paris.jpg" style="width:100%">
+          <img src="Images/gallery/3.jpg" style="width:100%">
+          <img src="Images/gallery/7.jpg" style="width:100%">
+          <img src="Images/gallery/11.jpg" style="width:100%">
+          <img src="Images/gallery/15.jpg" style="width:100%">
+          <img src="Images/gallery/19.jpg" style="width:100%">
+          <img src="Images/gallery/23.jpg" style="width:100%">
+
         </div>
         <div class="column">
-          <img src="/w3images/underwater.jpg" style="width:100%">
-          <img src="/w3images/ocean.jpg" style="width:100%">
-          <img src="/w3images/wedding.jpg" style="width:100%">
-          <img src="/w3images/mountainskies.jpg" style="width:100%">
-          <img src="/w3images/rocks.jpg" style="width:100%">
-          <img src="/w3images/underwater.jpg" style="width:100%">
+          <img src="Images/gallery/4.jpg" style="width:100%">
+          <img src="Images/gallery/8.jpg" style="width:100%">
+          <img src="Images/gallery/12.jpg" style="width:100%">
+          <img src="Images/gallery/16.jpg" style="width:100%">
+          <img src="Images/gallery/20.jpg" style="width:100%">
+          <img src="Images/gallery/24.jpg" style="width:100%">
+
         </div>
       </div>
 
