--- a/experience.html
+++ b/experience.html
@@ -280,6 +280,14 @@ body {
         </li>
       </ul>
       <h2 align="left">
+        Award:
+      </h2>
+      <ul>
+        <li>
+          <p align="left"><b>Best Active Member</b> | <b>NSU ACM Student Chapter</b> | Summer 2018</p>  
+        </li>
+      </ul>
+      <h2 align="left">
         Gallery:
       </h2>
       <div class="row"> 
