--- a/education.html
+++ b/education.html
@@ -161,7 +161,7 @@
   display: flex;
   width: 100%;
   padding: 4% 2%;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   height: 50vh;
 }
 
