--- a/experience.html
+++ b/experience.html
@@ -157,7 +157,7 @@
 
     }
     * {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
 body {
@@ -198,6 +198,7 @@ body {
     -ms-flex: 50%;
     flex: 50%;
     max-width: 50%;
+    
   }
 }
 
@@ -219,6 +220,7 @@ body {
     <div align="center" class="sidebarlogo">
       <a href="https://saifahammod.me"><img src="Images/logo.png" alt="Saif Ahammod" style="width:70%;"></a>
     </div>
+
 
     <a href="about.html">About</a>
     <a href="education.html">Education</a>
