New section hobbies added

--- a/about.html
+++ b/about.html
@@ -50,6 +50,7 @@
       font-size: larger;
       color: rgb(0, 0, 0);
       letter-spacing: 2px;
+      transition: 0.3s;
     }
 
     /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
@@ -101,6 +102,7 @@
     }
 
     .overlay {
+      box-sizing: border-box;
       position: absolute;
       bottom: 0;
       background: rgb(0, 0, 0);
@@ -211,7 +213,7 @@
       color: white;
       border-radius: 5px 0 0 5px;
       text-align: right;
-    }
+    } 
 
     #mySidenav a:hover {
       right: 0;
@@ -258,10 +260,10 @@
   <!-- Page content -->
   <div align="center" class="content">
     ​<div id="mySidenav" class="sidenav">
-      <a href="#" id="gallery">Gallery</a>
-      <a href="#" id="blog">Blog</a>
-      <a href="#" id="projects">Photography</a>
-      <a href="#" id="contact">Design</a>
+      <a href="hobbies/gallery.html" id="gallery">Gallery</a>
+      <a href="hobbies/blog.html" id="blog">Blog</a>
+      <a href="hobbies/photography.html" id="projects">Photography</a>
+      <a href="hobbies/design.html" id="contact">Design</a>
     </div>
     <div style="width: 1000px;">
       <div class="container">
