--- a/experience.html
+++ b/experience.html
@@ -4,250 +4,7 @@
 <head>
   <title>Experience</title>
   <link rel="icon" type="image/x-icon" href="Images/Logo.png">
-
-  <style>
-    body {
-      background-color: #f1f1f1;
-    }
-
-    .sidebar {
-      margin: 0;
-      padding: 0;
-      width: 250px;
-      background-color: #ffffff;
-      position: fixed;
-      height: 100%;
-      overflow: auto;
-
-    }
-
-    div.sidebarlogo {
-      margin-top: 40px;
-      margin-bottom: 20px;
-    }
-
-    /* Sidebar links */
-    .sidebar a {
-      display: block;
-      color: black;
-      padding: 16px;
-      text-decoration: none;
-      font-family: sans-serif;
-    }
-
-    /* Active/current link */
-    .sidebar a.active {
-
-      color: black;
-      font-size: large;
-      font-family: sans-serif;
-      font-weight: bold;
-
-    }
-
-    /* Links on mouse-over */
-    .sidebar a:hover:not(.active) {
-      font-size: larger;
-      color: rgb(0, 0, 0);
-      letter-spacing: 2px;
-    }
-
-    /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
-    div.content {
-      margin-left: 250px;
-      padding: 1px 16px;
-      height: auto;
-    }
-
-    /* On screens that are less than 700px wide, make the sidebar into a topbar */
-    @media screen and (max-width: 700px) {
-      .sidebar {
-        width: 100%;
-        height: auto;
-        position: relative;
-      }
-
-      .sidebar a {
-        float: left;
-      }
-
-      div.content {
-        margin-left: 0;
-      }
-    }
-
-    /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
-    @media screen and (max-width: 400px) {
-      .sidebar a {
-        text-align: center;
-        float: none;
-      }
-    }
-
-
-
-    div.firstimage {
-      margin-top: 40px;
-      margin-bottom: 40px;
-    }
-
-    p {
-      font-size: large;
-      /* font-family:cursive; */
-
-    }
-
-    div.pstyle {
-      line-height: 2;
-    }
-
-    h1 {}
-
-    h2 {
-
-      /* font-family:cursive; */
-      line-height: 1;
-      margin-top: 60px;
-    }
-
-    h3 {
-      /* font-family:cursive; */
-      line-height: 1.2;
-
-    }
-
-    h4 {
-      /* font-family:cursive; */
-      line-height: .5;
-      text-indent: 20px;
-
-    }
-
-    h5 {
-      /* font-family:cursive; */
-
-    }
-
-    .button {
-      border: none;
-      color: white;
-
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
-      transition-duration: 0.4s;
-      cursor: pointer;
-      border-radius: 2px;
-      margin-top: 40px;
-      border-top-left-radius: 25px;
-      border-bottom-right-radius: 25px;
-    }
-
-    .button1 {
-      background-color: white;
-      color: black;
-      border: 2px solid black;
-    }
-
-    .button1:hover {
-      background-color: white;
-      color: white;
-
-    }
-    * {
-  /* box-sizing: border-box; */
-}
-
-body {
-  margin: 0;
-  font-family: Arial;
-}
-
-.header {
-  text-align: center;
-  padding: 32px;
-}
-
-.row {
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-  padding: 0 4px;
-}
-
-/* Create four equal columns that sits next to each other */
-.column {
-  -ms-flex: 25%; /* IE10 */
-  flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
-}
-
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
-  width: 100%;
-}
-
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-  .column {
-    -ms-flex: 50%;
-    flex: 50%;
-    max-width: 50%;
-    
-  }
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    -ms-flex: 100%;
-    flex: 100%;
-    max-width: 100%;
-  }
-}
-
-#mySidenav a {
-      position: absolute;
-      right: -120px;
-      transition: 0.3s;
-      padding: 15px;
-      width: 120px;
-      text-decoration: none;
-      font-size: 20px;
-      color: white;
-      border-radius: 5px 0 0 5px;
-      text-align: right;
-    } 
-
-    #mySidenav a:hover {
-      right: 0;
-    }
-
-    #gallery {
-      top: 60px;
-      background-color: #04AA6D;
-    }
-
-    #blog {
-      top: 120px;
-      background-color: #2196F3;
-    }
-
-    #projects {
-      top: 180px;
-      background-color: #f44336;
-    }
-
-    #contact {
-      top: 240px;
-      background-color: #555
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -332,49 +89,7 @@ body {
           <p align="left"><b>Best Active Member</b> | <b>NSU ACM Student Chapter</b> | Summer 2018</p>  
         </li>
       </ul>
-      <h2 align="left">
-        Gallery:
-      </h2>
-      <div class="row"> 
-        <div class="column">
-          <img src="Images/gallery/1.jpg" style="width:100%">
-          <img src="Images/gallery/5.jpg" style="width:100%">
-          <img src="Images/gallery/9.jpg" style="width:100%">
-          <img src="Images/gallery/13.jpg" style="width:100%">
-          <img src="Images/gallery/17.jpg" style="width:100%">
-          <img src="Images/gallery/21.jpg" style="width:100%">
-          <img src="Images/gallery/25.jpg" style="width:100%">
-        </div>
-        <div class="column">
-          <img src="Images/gallery/2.jpg" style="width:100%">
-          <img src="Images/gallery/6.jpg" style="width:100%">
-          <img src="Images/gallery/10.jpg" style="width:100%">
-          <img src="Images/gallery/14.jpg" style="width:100%">
-          <img src="Images/gallery/18.jpg" style="width:100%">
-          <img src="Images/gallery/22.jpg" style="width:100%">
-
-        </div>  
-        <div class="column">
-          <img src="Images/gallery/3.jpg" style="width:100%">
-          <img src="Images/gallery/7.jpg" style="width:100%">
-          <img src="Images/gallery/11.jpg" style="width:100%">
-          <img src="Images/gallery/15.jpg" style="width:100%">
-          <img src="Images/gallery/19.jpg" style="width:100%">
-          <img src="Images/gallery/23.jpg" style="width:100%">
-
-        </div>
-        <div class="column">
-          <img src="Images/gallery/4.jpg" style="width:100%">
-          <img src="Images/gallery/8.jpg" style="width:100%">
-          <img src="Images/gallery/12.jpg" style="width:100%">
-          <img src="Images/gallery/16.jpg" style="width:100%">
-          <img src="Images/gallery/20.jpg" style="width:100%">
-          <img src="Images/gallery/24.jpg" style="width:100%">
-
-        </div>
-      </div>
-
-
+    
       <!-- Page content ends here -->
     </div>
   </div>
