--- a/about.html
+++ b/about.html
@@ -31,11 +31,11 @@
       <a href="hobbies/photography.html" id="projects">Photography</a>
       <a href="hobbies/design.html" id="contact">Design</a>
     </div>
-    <div style="width: 1000px;">
-      <div class="container">
-
-        <div class="firstimage"><img src="Images/AboutPic1.jpg" alt="Saif Ahammod" style="width:100%;"></div>
-
+    <div class="pagebackground">
+      <div class="containeraboutpic">
+        <div class="firstimage"> 
+          <img src="Images/AboutPic1.jpg" alt="Saif Ahammod" style="width:100%;">
+        </div>
         <div class="overlay">MD. SAIF AHAMMOD KHAN</div>
       </div>
 
@@ -73,6 +73,13 @@
 
           <p align="Justify">
             <b>Research Interest:</b> HCI, AI & Robotics
+          </p>
+
+        </li>
+        <li>
+
+          <p align="Justify">
+            <b>Hobbies:</b> Photography, Designing, Playing games.
           </p>
 
         </li>
