--- a/contact.html
+++ b/contact.html
@@ -4,198 +4,7 @@
 <head>
   <title>Contact</title>
   <link rel="icon" type="image/x-icon" href="Images/Logo.png">
-
-  <style>
-    body {
-      background-color: #f1f1f1;
-    }
-
-    .sidebar {
-      margin: 0;
-      padding: 0;
-      width: 250px;
-      background-color: #ffffff;
-      position: fixed;
-      height: 100%;
-      overflow: auto;
-
-    }
-
-    div.sidebarlogo {
-      margin-top: 40px;
-      margin-bottom: 20px;
-    }
-
-    /* Sidebar links */
-    .sidebar a {
-      display: block;
-      color: black;
-      padding: 16px;
-      text-decoration: none;
-      font-family: sans-serif;
-    }
-
-    /* Active/current link */
-    .sidebar a.active {
-
-      color: black;
-      font-size: large;
-      font-family: sans-serif;
-      font-weight: bold;
-
-    }
-
-    /* Links on mouse-over */
-    .sidebar a:hover:not(.active) {
-      font-size: larger;
-      color: rgb(0, 0, 0);
-      letter-spacing: 2px;
-    }
-
-    /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
-    div.content {
-      margin-left: 250px;
-      padding: 1px 16px;
-      height: auto;
-    }
-
-    /* On screens that are less than 700px wide, make the sidebar into a topbar */
-    @media screen and (max-width: 700px) {
-      .sidebar {
-        width: 100%;
-        height: auto;
-        position: relative;
-      }
-
-      .sidebar a {
-        float: left;
-      }
-
-      div.content {
-        margin-left: 0;
-      }
-    }
-
-    /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
-    @media screen and (max-width: 400px) {
-      .sidebar a {
-        text-align: center;
-        float: none;
-      }
-    }
-
-
-
-    div.firstimage {
-      margin-top: 40px;
-      margin-bottom: 40px;
-    }
-
-    p {
-      font-size: large;
-      /* font-family:cursive; */
-
-    }
-
-    div.pstyle {
-      line-height: 2;
-    }
-
-    h1 {}
-
-    h2 {
-
-      /* font-family:cursive; */
-      line-height: 1;
-      margin-top: 60px;
-    }
-
-    h3 {
-      /* font-family:cursive; */
-      line-height: 1.2;
-
-    }
-
-    h4 {
-      /* font-family:cursive; */
-      line-height: .5;
-      text-indent: 20px;
-
-    }
-
-    h5 {
-      /* font-family:cursive; */
-      margin-top: 40px;
-    }
-
-    .button {
-      border: none;
-      color: white;
-
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
-      transition-duration: 0.4s;
-      cursor: pointer;
-      border-radius: 2px;
-      margin-top: 40px;
-      border-top-left-radius: 25px;
-      border-bottom-right-radius: 25px;
-    }
-
-    .button1 {
-      background-color: white;
-      color: black;
-      border: 2px solid black;
-    }
-
-    .button1:hover {
-      background-color: white;
-      color: white;
-
-    }
-
-
-    #mySidenav a {
-      position: absolute;
-      right: -120px;
-      transition: 0.3s;
-      padding: 15px;
-      width: 120px;
-      text-decoration: none;
-      font-size: 20px;
-      color: white;
-      border-radius: 5px 0 0 5px;
-      text-align: right;
-    } 
-
-    #mySidenav a:hover {
-      right: 0;
-    }
-
-    #gallery {
-      top: 60px;
-      background-color: #04AA6D;
-    }
-
-    #blog {
-      top: 120px;
-      background-color: #2196F3;
-    }
-
-    #projects {
-      top: 180px;
-      background-color: #f44336;
-    }
-
-    #contact {
-      top: 240px;
-      background-color: #555
-    }
-
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -222,7 +31,7 @@
       <a href="hobbies/photography.html" id="projects">Photography</a>
       <a href="hobbies/design.html" id="contact">Design</a>
     </div>
-    <div style="width: 1000px;">
+    <div class="pagebackground">
       <!-- Page content -->
       <div class="firstimage">
         <img src="Images/Comingsoon.gif" alt="Coming Soon" width="600" height="600">
