--- a/experience.html
+++ b/experience.html
@@ -32,7 +32,7 @@
       <a href="hobbies/photography.html" id="projects">Photography</a>
       <a href="hobbies/design.html" id="contact">Design</a>
     </div>
-    <div style="width: 1000px;">
+    <div class="pagebackground">
       <!-- Page content -->
       <div class="firstimage">
         <img src="Images/PagePic/experience.png" alt="Education" width="200" height="200">
