--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
         <li>
 
           <p align="Justify">
-            <b>Research Interest:</b> HCI, AI & Robotics
+            <b>Research Interest:</b> Human Computing Interaction, Artificial Intelligence, & Robotics
           </p>
 
         </li>
