--- a/experience.html
+++ b/experience.html
@@ -75,10 +75,28 @@
       <ul>
         <li>
           <p align="left"><b>RoboQuest 1.0</b> | Organized by NSU CEC | <b>Robo Soccer Segment</b></p>
-          
         </li>
         <li>
           <p align="left"><b>Robo Carnival</b> | Organized by BUET Robotics Society | <b>LFR and Robo Soccer Segment </b></p>
+        </li>
+        <li>
+          <p align="left"><b>Techsurgence 2019</b> | Organized by Department of ICT BUP | <b>Robo Soccer Segment </b></p>
+        </li>
+        <li>
+          <p align="left"><b>Robolution 2019</b> | Organized by MIST | <b>Robo Soccer Segment </b></p>
+        </li>
+        <li>
+          <p align="left"><b>ICASERT International Conferrence and Robo Fest</b> | Organized by Department of CSE, EWU | <b>Robo Soccer Segment</b></p>
+        </li>
+        <li>
+          <p align="left"><b>Woosh Without Wheel</b> | Organized by Robotics and Automation Society IEEE NSU Student Branch | <b>Robot Without Wheel</b></p>
+        </li>
+        <li>
+          <p align="left"><b>Hackathon on Android App Development </b> | Organized by NSU Proctor Office | <b>Android Application Development</b></p>
+        </li>
+  
+        <li>
+          <p align="left"><b>Mecceleration 2019 </b> | Organized by Department of Mechanical and Chemical Engineering, IUT | <b>Android Application Development</b></p>
         </li>
       </ul>
       <h2 align="left">
@@ -89,7 +107,10 @@
           <p align="left"><b>Best Active Member</b> | <b>NSU ACM Student Chapter</b> | Summer 2018</p>  
         </li>
       </ul>
-    
+    <br>
+    <br>
+    <br>
+    <br>
       <!-- Page content ends here -->
     </div>
   </div>
