--- a/expertise.html
+++ b/expertise.html
@@ -35,9 +35,63 @@
     <div class="pagebackground">
       <!-- Page content -->
       <div class="firstimage">
-        <img src="Images/Comingsoon.gif" alt="Coming Soon" width="600" height="600">
+        <img src="Images/PagePic/skills.png" alt="Experties" width="200" height="200">
       </div>
-      
+
+      <h2 align="left">
+        Technical Skill:
+      </h2>
+
+      <ul>
+        <li>
+          <p align="left"><b>Programming language :</b> JAVA, Python, C, C++, SQL  </p>
+        </li>
+        <li>
+          <p align="left"><b>Markup language:</b> HTML, XML, CSS  </p>
+        </li>
+        <li>
+          <p align="left"><b>Database tool:</b>  Firebase, MySQL</p>
+        </li>
+        <li>
+          <p align="left"><b>Version control tool:</b>  Git</p>
+        </li>
+        <li>
+          <p align="left"><b>Data science tools:</b>  Anaconda</p>
+        </li>
+        <li>
+          <p align="left"><b>Libraries:</b>  Scikit-Learn, Pandas, Keras</p>
+        </li>
+        <li>
+          <p align="left"><b>Platform:</b>  Android, Arduino, Raspberry Pi</p>
+        </li>
+        <li>
+          <p align="left"><b>Operating system:</b> Windows, Linux, Raspbian, Android  </p>
+        </li>
+        <li>
+          <p align="left"><b>Electronic design:</b>Fritzing, Proteus, Logisim  </p>
+        </li>
+        <li>
+          <p align="left"><b>Editing tool:</b>Sketch Up, Adobe (Photoshop, Illustrator, Premier Pro), Figma  </p>
+        </li>
+      </ul>
+      <h2 align="left">
+        Soft Skill:
+      </h2>
+      <ul>
+        <li>
+          <p align="left"><b>Organized | </b>I prefer always a organized work</p>
+        </li>
+        <li>
+          <p align="left"><b>Leadership | </b>I am confident and motivated to lead a team.</p>
+        </li>
+        <li>
+          <p align="left"><b>Group Member | </b>I can work as a group member</p>
+        </li>
+        <li>
+          <p align="left"><b>Agile | </b>I can work in agile environment</p>
+        </li>
+        
+      </ul>
 
       <!-- Page content ends here -->
     </div>
