--- a/hobbies/photography.html
+++ b/hobbies/photography.html
@@ -14,24 +14,24 @@
     <nav>
       <div class="items">
         <span class="item active" data-name="all">All</span>
-        <span class="item" data-name="bag">Bag</span>
-        <span class="item" data-name="shoe">Shoe</span>
-        <span class="item" data-name="watch">Watch</span>
-        <span class="item" data-name="camera">Camera</span>
-        <span class="item" data-name="headphone">Headphone</span>
+        <span class="item" data-name="nature">Nature</span>
+        <span class="item" data-name="city">City</span>
+        <span class="item" data-name="blackandwhite">B & W</span>
+        <span class="item" data-name="flower">Flower</span>
+
       </div>
     </nav>
     <!-- filter Images -->
     <div class="gallery">
-      <!-- <div class="image" data-name="bag"><span><img src="../Images/gallery/1.jpg" alt=""></span></div> -->
-      <!-- <div class="image" data-name="headphone"><span><img src="images/headphone-1.jpg" alt=""></span></div> -->
-      <!-- <div class="image" data-name="camera"><span><img src="images/camera-1.jpg" alt=""></span></div> -->
-      <!-- <div class="image" data-name="shoe"><span><img src="images/shoe-1.jpg" alt=""></span></div> -->
-      <!-- <div class="image" data-name="headphone"><span><img src="images/headphone-2.jpg" alt=""></span></div> -->
-      <!-- <div class="image" data-name="watch"><span><img src="images/watch-1.jpg" alt=""></span></div> -->
-      <!-- <div class="image" data-name="shoe"><span><img src="images/shoe-2.jpg" alt=""></span></div> -->
-      <!-- <div class="image" data-name="camera"><span><img src="images/camera-2.jpg" alt=""></span></div> -->
-    </div>
+      <div class="image" data-name="city"><span><img src="/hobbies/PhotographyImage/c1.jpg" alt=""></span></div> 
+      <div class="image" data-name="flower"><span><img src="/hobbies/PhotographyImage/f1.jpg" alt=""></span></div> 
+      <div class="image" data-name="nature"><span><img src="/hobbies/PhotographyImage/n1.jpg" alt=""></span></div> 
+      <div class="image" data-name="city"><span><img src="/hobbies/PhotographyImage/c4.jpg" alt=""></span></div> 
+      <div class="image" data-name="city"><span><img src="/hobbies/PhotographyImage/c2.png" alt=""></span></div> 
+      <div class="image" data-name="flower"><span><img src="/hobbies/PhotographyImage/f2.png" alt=""></span></div> 
+      <div class="image" data-name="city"><span><img src="/hobbies/PhotographyImage/c3.png" alt=""></span></div> 
+      <div class="image" data-name="flower"><span><img src="/hobbies/PhotographyImage/f3.png.jpg" alt=""></span></div> 
+
   </div>
   <!-- fullscreen img preview box -->
   <div class="preview-box">
