Photography page updated

--- a/hobbies/photography.html
+++ b/hobbies/photography.html
@@ -36,13 +36,16 @@
   <!-- fullscreen img preview box -->
   <div class="preview-box">
     <div class="details">
-      <span class="title">Image Category: <p></p></span>
+      <span class="title"><p></p></span>
       <span class="icon fas fa-times"></span>
     </div>
     <div class="image-box"><img src="" alt=""></div>
   </div>
   <div class="shadow"></div>
-
+  <div align="center">
+    <a href="../about.html"><button class="button button1">Back</button></a>
+  </div>
+  
   <script src="photographyscript.js"></script>
 
 </body>
