--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,46 @@
   <title>Contact</title>
   <link rel="icon" type="image/x-icon" href="Images/Logo.png">
   <link rel="stylesheet" href="css/style.css">
+  <style>
+.con{
+    display:flex;
+    gap:10px
+}
+.icon{
+    position:relative;
+    color:#00C896;
+    width:40px;
+    height:40px;
+    font-size:25px;
+    text-align:center;
+    margin:1rem;
+    cursor:pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon::after, .icon::before{
+    content:" ";
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    width:100%;
+    height:100%;
+    border:1px solid #000000;
+    opacity:0;
+    transition: 0.3s; 
+}
+.icon:hover::after{
+    opacity:1;
+    transform:translate(-50%, -50%) scale(1.2) rotate(25deg);
+    
+}
+.icon:hover::before{
+    opacity:1;
+    transform:translate(-50%, -50%) scale(1.2) rotate(45deg);
+}
+  </style>
 </head>
 
 <body>
@@ -34,8 +74,26 @@
     <div class="pagebackground">
       <!-- Page content -->
       <div class="firstimage">
-        <img src="Images/Comingsoon.gif" alt="Coming Soon" width="600" height="600">
+        <img src="Images/PagePic/project.png" alt="Education" width="200" height="200">
       </div>
+
+      <h2 align="left">
+        Contact:
+      </h2>
+      <div class="con">
+        <div class="icon">
+          <img src="Images/PagePic/project.png" alt="Education" width="40" height="40">
+        </div>
+        <div class="icon">
+            <i class="fa fa-facebook"></i>
+        </div>
+        <div class="icon">
+            <i class="fa fa-twitter"></i>
+        </div>
+        <div class="icon">
+            <i class="fa fa-linkedin"></i>
+        </div>
+    </div>
       
 
       <!-- Page content ends here -->
