--- a/mywork.html
+++ b/mywork.html
@@ -71,7 +71,8 @@
       </h3>
       <ul>
         <li>
-          <p align="left"></p>
+          <p align="justify"><b> Understanding the Healthcare Sector in Bangladesh: Experience and Services during the COVID-19 Pandemic</b> (Ridwanul Haque, <b>Md. Saif Ahammod Khan</b>, Nasim Mahmud Mishu, Rahat Jahangir Rony, Nova Ahmed)
+            Accepted for publication: The 6th Asian CHI Symposium (SEACHI 2022).</p>
           
         </li>
       </ul>
