--- a/contact.html
+++ b/contact.html
@@ -82,10 +82,10 @@
       </h2>
       <div class="con">
         <div class="icon">
-          <img src="Images/PagePic/project.png" alt="Education" width="40" height="40">
+          <a href="https://www.facebook.com/S41FKHAN"><img src="Images/Contact Icon/facebook.png" alt="Education" width="40" height="40"></a>
         </div>
         <div class="icon">
-            <i class="fa fa-facebook"></i>
+          <img src="Images/Contact Icon/twitter.png" alt="Education" width="40" height="40">
         </div>
         <div class="icon">
             <i class="fa fa-twitter"></i>
