--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
     <div class="pagebackground">
       <!-- Page content -->
       <div class="firstimage">
-        <img src="Images/PagePic/project.png" alt="Education" width="200" height="200">
+        <img src="Images/PagePic/contact.png" alt="Education" width="200" height="200">
       </div>
 
       <h2 align="left">
@@ -82,16 +82,17 @@
       </h2>
       <div class="con">
         <div class="icon">
+
           <a href="https://www.facebook.com/S41FKHAN"><img src="Images/Contact Icon/facebook.png" alt="Education" width="40" height="40"></a>
         </div>
         <div class="icon">
           <img src="Images/Contact Icon/twitter.png" alt="Education" width="40" height="40">
         </div>
         <div class="icon">
-            <i class="fa fa-twitter"></i>
+          <img src="Images/Contact Icon/linkedin.png" alt="Education" width="40" height="40">
         </div>
         <div class="icon">
-            <i class="fa fa-linkedin"></i>
+          <img src="Images/Contact Icon/instagram.png" alt="Education" width="40" height="40">
         </div>
     </div>
       
