--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,10 @@
       <div class="firstimage">
         <img src="Images/PagePic/contact.png" alt="Education" width="200" height="200">
       </div>
-      <br><br>
+
+      <h2 align="left">
+        Social Media:
+      </h2>
       <div class="con" align="center">
         <a href="https://www.facebook.com/S41FKHAN">
           <div class="icon">
