--- a/contact.html
+++ b/contact.html
@@ -103,11 +103,43 @@
             <img src="Images/Contact Icon/linkedin.png" alt="Education" width="40" height="40">
           </div>
         </a>
+        <a href="https://github.com/saif-ahammod/">
+          <div class="icon">
+            <img src="Images/Contact Icon/github.png" alt="Education" width="40" height="40">
+          </div>
+        </a>
+        <a href="https://www.kaggle.com/mdsaifahammodkhan">
+          <div class="icon">
+            <img src="Images/Contact Icon/kaggle.png" alt="Education" width="40" height="40">
+          </div>
+        </a>
+        <a href="https://scholar.google.com/citations?hl=en&authuser=1&user=gwOb2jsAAAAJ">
+          <div class="icon">
+            <img src="Images/Contact Icon/googlescholar.png" alt="Education" width="40" height="40">
+          </div>
+        </a>
+        <a href="https://www.researchgate.net/profile/Md-Saif-Khan">
+          <div class="icon">
+            <img src="Images/Contact Icon/rg.png" alt="Education" width="40" height="40">
+          </div>
+        </a>
+        <a href="https://www.youtube.com/channel/UCltyvTSm1860UvUkWZ7n9SQ">
+          <div class="icon">
+            <img src="Images/Contact Icon/youtube.png" alt="Education" width="40" height="40">
+          </div>
+        </a>
         <a href="https://www.instagram.com/s41f_khan">
           <div class="icon">
             <img src="Images/Contact Icon/instagram.png" alt="Education" width="40" height="40">
           </div>
         </a>
+        <a href="https://discord.gg/https://discord.gg/eAmRNNMr9N">
+          <div class="icon">
+            <img src="Images/Contact Icon/discord.png" alt="Education" width="40" height="40">
+          </div>
+        </a>
+
+
       </div>
 
 
