--- a/contact.html
+++ b/contact.html
@@ -5,53 +5,8 @@
   <title>Contact</title>
   <link rel="icon" type="image/x-icon" href="Images/Logo.png">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/stylecontact.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-  <style>
-    .con {
-      display: flex;
-      gap: 10px
-    }
-
-    .icon {
-      position: relative;
-      color: #00C896;
-      width: 40px;
-      height: 40px;
-      font-size: 25px;
-      text-align: center;
-      margin: 1rem;
-      cursor: pointer;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .icon::after,
-    .icon::before {
-      content: " ";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 100%;
-      height: 100%;
-      border: 1px solid #000000;
-      opacity: 0;
-      transition: 0.3s;
-    }
-
-    .icon:hover::after {
-      opacity: 1;
-      transform: translate(-50%, -50%) scale(1.2) rotate(25deg);
-
-    }
-
-    .icon:hover::before {
-      opacity: 1;
-      transform: translate(-50%, -50%) scale(1.2) rotate(45deg);
-
-    }
-  </style>
 </head>
 
 <body>
