--- a/expertise.html
+++ b/expertise.html
@@ -5,6 +5,70 @@
   <title>Expertise</title>
   <link rel="icon" type="image/x-icon" href="Images/Logo.png">
   <link rel="stylesheet" href="css/style.css">
+  <style>
+
+
+
+.wrapper {
+  width: 70%;
+  height: 100px;
+}
+
+.title {
+  display: block;
+  margin: 0 auto;
+}
+
+.flip3D {
+  width: 80px;
+  height: 80px;
+  margin: 10px;
+  float: left;
+}
+
+.flip3D .front {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  transform: perspective(600px) rotateX(0deg);
+  -webkit-transform: perspective(600px) rotateY(0deg);
+  background: rgb(0, 0, 0);
+  border-radius: 10px;
+  color: white;
+  backface-visibility: hidden;
+  transition: transform .6s linear 0s;
+  transition: -webkit-transform .6s linear 0s;
+  box-shadow: 0 0 10px .5px darkslategrey;
+}
+
+.flip3D .back {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  transform: perspective(600px) rotateX(180deg);
+  background: rgb(255, 255, 255);
+  border-radius: 10px;
+  backface-visibility: hidden;
+  transition: transform .6s linear 0s;
+  box-shadow: 0 0 10px .5px darkslategrey;
+}
+
+.flip3D:hover .front {
+  transform: perspective(600px) rotateX(-180deg);
+  box-shadow: 0 0 10px .5px darkslategrey;
+}
+
+.flip3D:hover .back {
+  transform: perspective(600px) rotateX(0deg);
+  box-shadow: 0 0 10px .5px darkslategrey;
+}
+  </style>
 </head>
 
 <body>
@@ -44,34 +108,58 @@
 
       <ul>
         <li>
-          <p align="left"><b>Programming language :</b> JAVA, Python, C, C++, SQL  </p>
+          <h3 align="left">Programming language :</h3>
+        </li>
+        <div class="wrapper">
+          <div class="flip3D">
+            <div class="back"><img src="Images/PagePic/skills.png" alt="Experties" width="70" height="70"></div>
+            <div class="front"><h3>JAVA</h3></div>
+          </div>
+          <div class="flip3D">
+            <div class="back"><img src="Images/PagePic/skills.png" alt="Experties" width="70" height="70"></div>
+            <div class="front"><h3>Python</h3></div>
+          </div>
+  
+          <div class="flip3D">
+            <div class="back"><img src="Images/PagePic/skills.png" alt="Experties" width="70" height="70"></div>
+            <div class="front"><h3>C</h3></div>
+          </div>
+          <div class="flip3D">
+            <div class="back"><img src="Images/PagePic/skills.png" alt="Experties" width="70" height="70"></div>
+            <div class="front"><h3>C++</h3></div>
+          </div>
+          <div class="flip3D">
+            <div class="back"><img src="Images/PagePic/skills.png" alt="Experties" width="70" height="70"></div>
+            <div class="front"><h3>SQL</h3></div>
+          </div>
+  
+        </div>
+        <li>
+          <p align="left"><b>Markup language:</b> HTML, XML, CSS </p>
         </li>
         <li>
-          <p align="left"><b>Markup language:</b> HTML, XML, CSS  </p>
+          <p align="left"><b>Database tool:</b> Firebase, MySQL</p>
         </li>
         <li>
-          <p align="left"><b>Database tool:</b>  Firebase, MySQL</p>
+          <p align="left"><b>Version control tool:</b> Git</p>
         </li>
         <li>
-          <p align="left"><b>Version control tool:</b>  Git</p>
+          <p align="left"><b>Data science tools:</b> Anaconda</p>
         </li>
         <li>
-          <p align="left"><b>Data science tools:</b>  Anaconda</p>
+          <p align="left"><b>Libraries:</b> Scikit-Learn, Pandas, Keras</p>
         </li>
         <li>
-          <p align="left"><b>Libraries:</b>  Scikit-Learn, Pandas, Keras</p>
+          <p align="left"><b>Platform:</b> Android, Arduino, Raspberry Pi</p>
         </li>
         <li>
-          <p align="left"><b>Platform:</b>  Android, Arduino, Raspberry Pi</p>
+          <p align="left"><b>Operating system:</b> Windows, Linux, Raspbian, Android </p>
         </li>
         <li>
-          <p align="left"><b>Operating system:</b> Windows, Linux, Raspbian, Android  </p>
+          <p align="left"><b>Electronic design:</b>Fritzing, Proteus, Logisim </p>
         </li>
         <li>
-          <p align="left"><b>Electronic design:</b>Fritzing, Proteus, Logisim  </p>
-        </li>
-        <li>
-          <p align="left"><b>Editing tool:</b>Sketch Up, Adobe (Photoshop, Illustrator, Premier Pro), Figma  </p>
+          <p align="left"><b>Editing tool:</b>Sketch Up, Adobe (Photoshop, Illustrator, Premier Pro), Figma </p>
         </li>
       </ul>
       <h2 align="left">
@@ -90,8 +178,9 @@
         <li>
           <p align="left"><b>Agile | </b>I can work in agile environment</p>
         </li>
-        
+
       </ul>
+
 
       <!-- Page content ends here -->
     </div>
