--- a/expertise.html
+++ b/expertise.html
@@ -47,7 +47,7 @@
 
       <ul>
         <li>
-          <h3 align="left">Programming language :</h3>
+          <h3 align="left">Programming language :Java, Python, C, C++, SQL</h3>
         </li>
         
         <li>
